[package]
name = "little-cube"
version = "0.1.0"
authors = ["livy <liv.cl@outlook.com>"]
keywords = []
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
piston_window = "0.120.0"
vecmath = "1.0.0"
camera_controllers = "0.32.0"
gfx = "0.18.2"
shader_version = "0.7.0"
